# LoadBalance

./: DEPLOYMENT.md  README.md  docker-compose.yml  issues_tracker.md  project_lifecycle.md  run_rust_tests.sh  technical_spec.md  test_cases.md  usability_tests.md  user_stories.md  workflow_diagrams.md
.agent/workflows/: fix-failed-tests.md
backend/: DEPLOYMENT.md  Dockerfile  add_fiscal_fields_migration.py  add_project_number_migration.py  add_project_site_migration.py  add_resourcing_requirements_migration.py  audit_log.py  auth.py  database.py  debug_db.py  export.py  import_data.py  main.py  migrate_db.py  models.py  requirements.txt  resource_manager.db  run_api_tests.py  schemas.py  snapshots.py  utils.py
backend/static/: heatmap_dashboard.html  heatmap_dashboard_v1.1.html  project_registry.html  roster_management.html  scenario_builder.html  ui_mockup.html
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ActivityLog.jsx  AddEngineerModal.jsx  AddRidModal.jsx  AllocationCard.jsx  BulkImportManager.jsx  EditEngineerModal.jsx  EngineerProfileModal.jsx  LoginPage.jsx  MobileDashboard.jsx  MobileProjectView.jsx  MobileStaffView.jsx  ProjectDetailModal.jsx  QuickAddPopover.jsx  SnapshotManager.jsx  UserManagement.jsx
resource_manager_rust/: Cargo.toml  DEPLOYMENT.md  README.md  resource_manager.db  test_cases.md  user_stories.md
resource_manager_rust/src/: db.rs  main.rs  models.rs  routes.rs
user_stories/: US-DASH-001_Dynamic_Quarter_Filters.md
(+3 files in other folders)
